# term.everything

./: STREAMING_README.md  package-lock.json  package.json  term.everything  test_bun_simple.ts  test_c_interop_init.ts  test_capture.ts  test_constructor_steps.ts  test_macos.js  test_raw_mode.ts  test_simple_macos.ts  test_streaming.ts  test_streaming_bun.ts  test_streaming_simple.cjs  test_terminal_simple.ts  test_terminal_window.ts
c_interop/: meson.build
c_interop/include/: ChafaInfo_macos.h  MACOS_HEADERS_POST.h  NODE_API_MODULE.h  TermSize.h  macos_display.h  macos_display_wrappers.h  macos_draw_desktop.h
c_interop/src/: ChafaInfo_macos.cpp  NODE_API_MODULE.cpp  TermSize.cpp  init_draw_state_macos.cpp  macos_display.cpp  macos_display_wrappers.cpp  macos_draw_desktop.mm  macos_terminal_detect.cpp
lib/: interop.node
resources/: macos.cross
src/: GlobalObjects.ts  MacOSTerminalManager.ts  Terminal_Window.ts  bun_streaming_wrapper.ts  c_interop.cjs  c_interop.ts  c_interop_node_path.ts  get_display_server_platform.ts  index_macos.ts  macOS_Display_Server.ts  macos_terminal_with_gui.ts  simple_macos_terminal.ts
src/errors/: ErrorTypes.ts  Logger.ts
src/objects/: wl_compositor.ts  wl_data_device_manager.ts  wl_display.ts  wl_keyboard.ts  wl_output.ts  wl_seat.ts  wl_shm.ts  wl_subcompositor.ts  wl_touch.ts  xdg_wm_base.ts  xwayland_shell_v1.ts  zwp_xwayland_keyboard_grab_manager_v1.ts  zxdg_decoration_manager_v1.ts
undefined/: wayland.xml.ts
